tests/invalid/unary_not_class_missing_bool/main.py
class A:
    def __init__(self) -> None:
        pass


def main() -> None:
    a: A = A()
    b: bool = not a
